blue-deployment/nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pod
      version: "1"
  template:
    metadata:
      labels:
        app: nginx-pod
        version: "1"
    spec:
      containers:
      - name: nginx
        image: nginx:1.13.1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: nginxvol
      volumes:
        - name: nginxvol
          persistentVolumeClaim:
            claimName: nginx-persistentvolumeclaim
