blue-deployment/nginx-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginxhost
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
